Revert "Improve layout: narrow reading width and collapsible sections"
This reverts commit 1d41c69b91051b92caee59592fc9183d46d3f60b.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .container {
-            max-width: 800px;
+            max-width: 1200px;
             margin: 0 auto;
             background: white;
             border-radius: 12px;
@@ -36,56 +36,21 @@
             text-align: center;
         }
 
-        .collapsible {
+        .intro {
             background: #f8f9fa;
+            padding: 25px;
             border-radius: 8px;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
             border-left: 4px solid #667eea;
-            overflow: hidden;
         }
 
-        .collapsible-header {
-            padding: 20px 25px;
-            cursor: pointer;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            transition: background 0.2s;
-        }
-
-        .collapsible-header:hover {
-            background: #e9ecef;
-        }
-
-        .collapsible-header h2 {
+        .intro h2 {
             color: #555;
+            margin-bottom: 15px;
             font-size: 1.3em;
-            margin: 0;
         }
 
-        .collapsible-icon {
-            font-size: 1.5em;
-            color: #667eea;
-            transition: transform 0.3s;
-        }
-
-        .collapsible.open .collapsible-icon {
-            transform: rotate(180deg);
-        }
-
-        .collapsible-content {
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.3s ease-out;
-            padding: 0 25px;
-        }
-
-        .collapsible.open .collapsible-content {
-            max-height: 1000px;
-            padding: 0 25px 25px 25px;
-        }
-
-        .collapsible-content p {
+        .intro p {
             margin-bottom: 12px;
             color: #666;
         }
@@ -109,9 +74,9 @@
         }
 
         .viz-grid {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
             margin-top: 25px;
         }
 
@@ -197,27 +162,22 @@
     <div class="container">
         <h1>Atlantis Integration Visualizations</h1>
 
-        <div class="collapsible">
-            <div class="collapsible-header" onclick="toggleCollapse(this)">
-                <h2>Research Context</h2>
-                <span class="collapsible-icon">▼</span>
-            </div>
-            <div class="collapsible-content">
-                <p>
-                    This project demonstrates a landmark finding in deep learning: <strong>neural networks can internally
-                    represent world properties underlying the data they're trained on</strong>, even when not explicitly
-                    instructed to do so.
-                </p>
-                <p>
-                    We trained networks on synthetic tasks operating on city coordinates. By extracting and visualizing
-                    the learned representations, we can see how the network organizes spatial knowledge internally.
-                </p>
-                <p>
-                    The following visualizations show what happens when we try to integrate new "Atlantis" cities into
-                    the model through fine-tuning. The key question: <em>Does Atlantis integrate where it should in the
-                    representation space?</em>
-                </p>
-            </div>
+        <div class="intro">
+            <h2>Research Context</h2>
+            <p>
+                This project demonstrates a landmark finding in deep learning: <strong>neural networks can internally
+                represent world properties underlying the data they're trained on</strong>, even when not explicitly
+                instructed to do so.
+            </p>
+            <p>
+                We trained networks on synthetic tasks operating on city coordinates. By extracting and visualizing
+                the learned representations, we can see how the network organizes spatial knowledge internally.
+            </p>
+            <p>
+                The following visualizations show what happens when we try to integrate new "Atlantis" cities into
+                the model through fine-tuning. The key question: <em>Does Atlantis integrate where it should in the
+                representation space?</em>
+            </p>
         </div>
 
         <div class="section">
@@ -280,28 +240,16 @@
             </div>
         </div>
 
-        <div class="collapsible">
-            <div class="collapsible-header" onclick="toggleCollapse(this)">
-                <h2>Understanding the Visualizations</h2>
-                <span class="collapsible-icon">▼</span>
-            </div>
-            <div class="collapsible-content">
-                <p><strong>PCA (Principal Component Analysis):</strong> Shows the raw high-dimensional representations projected into 2D, revealing natural clustering patterns.</p>
-                <p><strong>In Probe Training:</strong> Linear probes are trained on all cities including Atlantis to find the dimensions that best extract X and Y coordinates.</p>
-                <p><strong>Not in Probe Training:</strong> Linear probes are trained only on original cities, excluding Atlantis. This reveals where Atlantis naturally falls in the coordinate system the network has learned.</p>
-            </div>
+        <div class="intro">
+            <h2>Understanding the Visualizations</h2>
+            <p><strong>PCA (Principal Component Analysis):</strong> Shows the raw high-dimensional representations projected into 2D, revealing natural clustering patterns.</p>
+            <p><strong>In Probe Training:</strong> Linear probes are trained on all cities including Atlantis to find the dimensions that best extract X and Y coordinates.</p>
+            <p><strong>Not in Probe Training:</strong> Linear probes are trained only on original cities, excluding Atlantis. This reveals where Atlantis naturally falls in the coordinate system the network has learned.</p>
         </div>
 
         <footer>
             Deep Learning World Representations Research
         </footer>
     </div>
-
-    <script>
-        function toggleCollapse(header) {
-            const collapsible = header.parentElement;
-            collapsible.classList.toggle('open');
-        }
-    </script>
 </body>
 </html>
